--- a/src/index.css
+++ b/src/index.css
@@ -4,4 +4,8 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+
+  font-size: var(--body-fontSize);
+
+  font-family: var(--fontFamily);
 }
