--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,9 @@
-@import './global/global.module.css';
-
 * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
 
-  font-size: var(--body-fontSize);
+  font-size: var(--body-font-size);
 
-  font-family: var(--fontFamily);
+  font-family: var(--body-font-family);
 }
