feat: create-slide route and added some styles

--- a/src/components-ui/button/button.module.css
+++ b/src/components-ui/button/button.module.css
@@ -1,5 +1,5 @@
 @import '../../global/global.css';
-@import './themes/pink-theme.module.css';
+@import '../themes/pink-theme.module.css';
 
 :root {
     --background-color: #ffff;
