feat: added more styles to sidenav and bg color

--- a/src/global/global.css
+++ b/src/global/global.css
@@ -62,6 +62,22 @@
     }
 }
 
+.absolute {
+    position: absolute;
+}
+
+.relative {
+    position: relative;
+}
+
+.sticky {
+    position: sticky;
+}
+
+.fixed {
+    position: fixed;
+}
+
 /** PADDING **/
 
 .padding {
