--- a/src/features/image-form/index.module.css
+++ b/src/features/image-form/index.module.css
@@ -8,3 +8,15 @@
     width: 100%;
     min-height: 500px;
 }
+
+.wrapper-no-image {
+    display: flex;
+    flex-direction: column;
+
+    align-items: center;
+    gap: 8px;
+}
+
+.wrapper-image {
+
+}
